<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About App</string>
    <string name="aboutActivityTitle">About</string>
    <string name="about_app_summary">App Share lets you easily share apps to your friends, extract apps to your phone and uninstall apps from your phone.</string>
    <string name="about_app_title">About</string>
    <string name="about_player_service">Audio Player Service</string>
    <string name="about_privacy_summary">We consider user privacy of utmost importance and take all precautions to protect user privacy during use of our android apps.</string>
    <string name="about_recorder_service">Audio Recoridng Service</string>
    <string name="about_translations">Help us translate Voice Recorder to your native language to benefit your language users</string>
    <string name="action_ad">Ad</string>
    <string name="action_consent">Consent</string>
    <string name="action_deleted_items">Trash</string>
    <string name="action_list_recordings">List</string>
    <string name="action_search">Search Recordings..</string>
    <string name="action_settings">Settings</string>
    <string name="adcame">Ad Came Successfully</string>
    <string name="adnotcame">Ad did not come</string>
    <string name="alarm">Alarm</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="androidmarket" />
    <string name="app_name">Voice Recorder</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="appversion">App Version:</string>
    <string name="artist_name">VoiceRecorder</string>
    <string name="bad_extension_error">Sorry, VoiceRecorder is not yet able to edit files of type</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brand">Device Brand:</string>
    <string name="btnDislike">Dislike It</string>
    <string name="btnNo">No,Thanks</string>
    <string name="btnRateMe">"Rate
5 Stars"</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_label">CANCEL</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="choose_email_client">Tell us more about the problems you are facing with the app</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="confirm_label">CONFIRM</string>
    <string name="connectplaystore">Could not connect to Play store</string>
    <string name="contenttitle">Voice Recorder</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="couldNotOpenAndroidMarket">Could not open Android market.</string>
    <string name="create_folder_error">The folder could not be created</string>
    <string name="create_folder_error_already_exists">folder already exists</string>
    <string name="create_folder_error_no_write_access">Can not write to this folder</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name ?</string>
    <string name="create_folder_success">Folder created</string>
    <string name="creationtime">Creation time:</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_web_client_id">798153425800-0gm1sngq8geit56d4dc0o3g3jpqa9ibc.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_permanentaly">Delete Permanently</string>
    <string name="deleteactivitytitle">Deleted Recordings</string>
    <string name="deleted">Record Deleted Successfully</string>
    <string name="deletefile">Delete File</string>
    <string name="deletefilepermanently">Delete File Permanently</string>
    <string name="do_nothing_with_ringtone_button">Close</string>
    <string name="duration">Duration:</string>
    <string name="durationDecreasing">Duration Decreasing</string>
    <string name="durationIncreasing">Duration Increasing</string>
    <string name="edit">Edit</string>
    <string name="editFile">Edited File Saved Successfully</string>
    <string name="edit_intent">Edit</string>
    <string name="end_label">END:</string>
    <string name="end_marker">End marker</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="extension_last">mp3</string>
    <string name="extension_last1">MP3</string>
    <string name="ffwd">Fast forward</string>
    <string name="licencesummary">Licence details for open-source software</string>
    <string name="licencetitle">Open Source Licences</string>
    <string name="play">Play</string>
    <string name="pref_header_about">Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacypolicyurl">https://raytechnoto.github.io/privacy-policy/</string>
    <string name="recording_file_type">Recording File Type</string>
    <string name="recording_folder_path">Recording Folder</string>
    <string name="recording_name_confirmation_summary_off">Recording File is saved with default name</string>
    <string name="recording_name_confirmation_summary_on">Enter the file name after recording</string>
    <string name="recording_name_confirmation_title">Recording File Name Confirmation</string>
    <string name="recording_quality">Sample Rate</string>
    <string name="recordingoption">Recording Options</string>
    <string name="rewind">Rewind</string>
    <string name="select_sort_order">Recordings Sort Order</string>
    <string name="start_label">START:</string>
    <string name="start_marker">Start marker</string>
    <string name="summary_faqs">Frequently Asked Questions</string>
    <string name="summary_support">Tell us more about the problems you are facing with the app</string>
    <string name="title_faqs">FAQs</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="trash_size">Trash Size</string>
    <string name="trashcontent">Files will be moved to the trash when deleted</string>
    <string name="trashcontentoff">Files will be deleted permanently and cannot be restored</string>
</resources>