<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:theme="@style/MyToolBarStyle" android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout android:background="#ff000022" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <com.raytechnoto.glab.voicerecorder.WaveformView android:id="@id/waveform" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.raytechnoto.glab.voicerecorder.MarkerView android:id="@id/startmarker" android:nextFocusDown="@id/endmarker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/marker_left" android:contentDescription="@string/start_marker" />
        <com.raytechnoto.glab.voicerecorder.MarkerView android:id="@id/endmarker" android:nextFocusUp="@id/startmarker" android:nextFocusDown="@id/info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/marker_right" android:contentDescription="@string/end_marker" />
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@id/info" android:nextFocusUp="@id/endmarker" android:nextFocusDown="@id/play" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AudioFileInfoOverlayText" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="50.0dip" style="@style/ToolbarBackground">
        <ImageButton android:id="@id/rew" android:layout_width="64.0dip" android:layout_height="52.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" android:src="@android:drawable/ic_media_previous" android:contentDescription="@string/rewind" style="@android:style/MediaButton" />
        <ImageButton android:id="@id/play" android:layout_width="71.0dip" android:layout_height="52.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" android:src="@android:drawable/ic_media_play" android:contentDescription="@string/play" style="@android:style/MediaButton" />
        <ImageButton android:id="@id/ffwd" android:layout_width="64.0dip" android:layout_height="52.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="6.0dip" android:src="@android:drawable/ic_media_next" android:contentDescription="@string/ffwd" android:layout_marginEnd="5.0dip" style="@android:style/MediaButton" />
    </LinearLayout>
    <LinearLayout style="@style/HorizontalDividerTop" />
    <LinearLayout style="@style/HorizontalDividerBottom" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="80.0dip" style="@style/ToolbarBackground">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/mark_start" android:clickable="true" android:layout_width="wrap_content" android:layout_height="31.0dip" android:text="@string/start_label" android:labelFor="@id/starttext" />
        <EditText android:textSize="16.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/starttext" android:layout_width="70.0dip" android:layout_height="wrap_content" android:inputType="numberDecimal" android:layout_marginStart="10.0dip" android:layout_marginEnd="30.0dip" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/mark_end" android:clickable="true" android:layout_width="wrap_content" android:layout_height="31.0dip" android:text="@string/end_label" android:labelFor="@id/endtext" />
        <EditText android:textSize="16.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/endtext" android:layout_width="70.0dip" android:layout_height="wrap_content" android:inputType="numberDecimal" android:layout_marginStart="10.0dip" />
    </LinearLayout>
</LinearLayout>